# Tetris-tui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
homework/day1/: main  main.c  软件2319班+20231614134+王旭辉.doc
include/: data.h  game.h  piece.h  renderer.h  windows_ui.h
material/2023-2024第一学期实践课程-通知学生/20级实训要求/: 实训报告模板.doc  软件学院2023-2024年秋20级实训安排.docx
material/2023-2024第一学期实践课程-通知学生/20级实训要求/实训项目文档/: 附录A 软件需求分析报告文档模板.doc  附录B 软件概要设计报告文档模板.doc  附录D 软件实现报告文档模板.doc
material/2023-2024第一学期实践课程-通知学生/21级实训要求/: 软件学院2023-2024年秋21级实训安排.docx
material/2023-2024第一学期实践课程-通知学生/21级实训要求/实训项目文档/: ~$报告模板 -封面.doc  目录.doc  附录C   软件详细设计报告文档模板.doc
material/2023-2024第一学期实践课程-通知学生/22级实训要求/: 实训答辩记录单.doc  软件学院2023-2024年秋22级实训安排.docx
material/2023-2024第一学期实践课程-通知学生/23级实训要求/: 软件学院2023-2024年秋23级实训安排.docx
material/2023-2024第一学期实践课程-通知学生/23级实训要求/实训项目文档/: 实训项目文档格式要求.doc  封面.doc
material/下发材料/: codeblocks安装教程.docx  windows系统函数.docx  定时器设置.docx  按键控制.docx  视频地址.txt
src/: game.c  main.c  piece.c  renderer.c  windows_ui.c
